# mobile_robotics_engineer

./: README.md
control_systems/: package.xml
mapping/: CMakeLists.txt
mapping/launch/: map_loading_2d.launch.py  slambot_mapping_bringup.launch.py
mapping/map/: room.pgm  room.yaml
navigation_/: Readme.md
navigation_/config/: nav2_params.yaml  nav2_slambot_params.yaml
navigation_/launch/: nav2_stack.launch.py  slambot_navigation.launch.py
path_planning/config/: servers.rviz
path_planning/launch/: custom_planner.launch.py  servers.launch.py
planners/planner_custom/: README.md
planners/planner_custom/launch/: custom_planner.launch.py  path_plan_rviz.launch.py
planners/planner_custom/rviz/: nav2_steps.rviz
robot_sensing/: CMakeLists.txt
robot_sensing/src/: lidar_splitter.cpp
slam/: README.md
slam/config/: 3d_mapping_tb3.rviz
slam/launch/: 2d_map_load_rviz.launch.py  2d_mapping_tb3.launch.py  3d_mapping_drone.launch.py  3d_mapping_tb3.launch.py
slambot/: Readme.md
slambot/slambot_bringup/: CMakeLists.txt  Readme.md  package.xml
slambot/slambot_bringup/config/: bringup.rviz
slambot/slambot_bringup/launch/: odom_tf_ready.launch.py  slam_with_hw_intf.launch.py
slambot/slambot_bringup/map/: big_room.pgm  big_room.yaml  small_room.pgm  small_room.yaml
slambot/slambot_bringup/src/: imu_fix.cpp  odom_generator.cpp
slambot/slambot_control/: CMakeLists.txt  diffbot_system_hardware.xml  package.xml
slambot/slambot_control/config/: slambot_controller.yaml
slambot/slambot_control/include/slambot_control/: diffbot_system.hpp
slambot/slambot_control/launch/: ros2_controller_bringup.launch.py  rviz_view_robot.launch.py
slambot/slambot_control/src/: diffbot_system.cpp
slambot/slambot_control/urdf/: slambot.urdf  slambot_mock.urdf
slambot/slambot_navigation/: CMakeLists.txt  package.xml
slambot/slambot_navigation/config/: nav2_params.yaml
slambot/slambot_pio/: Readme.md  platformio.ini
slambot/slambot_pio/docs/: lectures.md  main_.cpp  (+4 more)
slambot/slambot_resources/: Components.md  Wiring_guide.md
(+20 files in other folders)
